--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -15,6 +15,8 @@
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
 		<org.springframework-version>6.2.1</org.springframework-version>
+		<jcloverslf4j.version>1.7.36</jcloverslf4j.version>		
+    	<logback.version>1.2.11</logback.version>
 	</properties>
 
 	<dependencies>
@@ -23,6 +25,13 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
+			<!-- JCL exclude -->
+			<exclusions>
+			   	<exclusion>
+			   		<groupId>org.springframework</groupId>
+			   		<artifactId>spring-jcl</artifactId>
+			   	</exclusion>
+			</exclusions>
 		</dependency>
 		
 		<!-- spring jdbc -->
@@ -82,6 +91,18 @@
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.10.2</version>
 			<scope>test</scope>
+		</dependency>
+		
+		<!-- Logback --> 
+		<dependency>                                    
+			<groupId>org.slf4j</groupId>                
+			<artifactId>jcl-over-slf4j</artifactId>     
+			<version>${jcloverslf4j.version}</version>  
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
 		</dependency>
 		
 		<!-- servlet-api -->
