--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -40,6 +40,13 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>8.0.0.Final</version>
 		</dependency>
+		
+		<!-- jackson -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.18.1</version>
+		</dependency>
 
 		<!-- spring jdbc -->
 		<dependency>
